2001-10-05  Raph Levien  <raph@pixel.artofcode.com>

	* art_svp_intersect.c: Major changes to accommodate
	horizontal lines. Intersections of horizontal lines
	aren't fully processed, but should work a lot better
	than before.

	* testart.c: Minor tweaks. testpat now frees memory
	so it can be run under memprof to detect leaks.

2001-10-03  Raph Levien  <raph@pixel.artofcode.com>

	* art_svp_intersect.c (art_svp_intersect_advance_cursor):
	Made test_cross for inserted segments common between
	intersection processing and cursor advance, and also took
	care of a case that hadn't been handled before. Also added
	invariant sanitychecker for debugging purposes.

2001-10-02  Raph Levien  <raph@pixel.artofcode.com>

	* art_svp_ops.c: ART_USE_NEW_INTERSECTOR variants of svp
	ops changed to do shallow free of merged svp.

2001-10-01  Raph Levien  <raph@acm.org>

	* art_svp_intersect.c:
	* art_svp_intersect.h:
	* Makefile.am:
	* art_misc.h:
	* art_svp_wind.h: First commit of new intersector code. It is
	  turned off by default, but can be enabled by #defining
	  ART_USE_NEW_INTERSECTOR in art_misc.h.

	* art_svp_ops.c: Make svp ops use new intersector if enabled.

	* art_svp_vpath_stroke.c: Make vpath stroking use new intersector
	if enabled.
	
	* testart.c: New test case for intersector.

Wed Sep 26 03:48:13 2001  George Lebl <jirka@5z.com>

	* Release 2.3.6

Wed Sep 26 03:11:40 2001  George Lebl <jirka@5z.com>

	* gen_art_config.c: Fix 64bit issues, cast sizeof return when
	  using %d to print it.

2001-09-13  Havoc Pennington  <hp@redhat.com>

	* Makefile.am: rename library to libart_lgpl_2

	* libart-2.0.pc.in (Cflags): move includes

	* libart-config.in: move includes

	* Makefile.am: delete libartConf.sh, rename libart-config
	(EXTRA_DIST): don't install m4 files
	(libart_lgplincdir): move headers

2001-08-03  Michael Meeks  <michael@ximian.com>

	* Version 2.3.5 for the API freeze.

2001-07-12  Darin Adler  <darin@bentspoon.com>
